<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_mm"
    android:orientation="vertical" >

    <!-- 标题栏 -->

    <RelativeLayout
        android:id="@+id/main_title"
        style="@style/title" >

        <TextView
            android:id="@+id/weather"
            android:layout_marginLeft="10dp"
            android:text="@string/weather"
            style="@style/main_title_text"
           />

        <TextView
            android:id="@+id/set"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/set"
             style="@style/main_title_text"/>
    </RelativeLayout>

    <LinearLayout
        style="@style/layout_mm"
        android:layout_below="@id/main_title"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/main_text"
            style="@style/layout_mz"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="@dimen/main_text_size" />

        <GridView
            android:id="@+id/homegridview"
            style="@style/layout_mz"
            android:layout_weight="2"
            android:gravity="center"
            android:numColumns="3"
            android:verticalSpacing="10dp" />
    </LinearLayout>

</RelativeLayout>