<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/friend_manager_layout" 
    >

    <RelativeLayout style="@style/title"
        android:id="@+id/title" 
        android:layout_alignParentTop="true"
        >

        <LinearLayout
            android:id="@+id/back_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" >

            <cn.cnic.marathon.ui.CustomTextView
                style="@style/layout_ww"
                android:layout_marginLeft="10sp"
                android:text="@string/arrow_back"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                style="@style/layout_ww"
                android:text="@string/back"
                android:textColor="@color/wheat"
                android:textSize="14sp" />
        </LinearLayout>

        <cn.cnic.marathon.ui.CustomTextView
            android:id="@+id/add_friends"
            style="@style/layout_ww"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10sp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="25sp" />
		
        <TextView
            android:id="@+id/complete"
            style="@style/layout_ww"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10sp"
            android:text="完成"
            android:textColor="@color/white"
            android:visibility="gone"
            android:textSize="18sp"/>
        <TextView
            style="@style/layout_ww"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/friends_manage"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5sp"
        android:focusable="true" 
        android:focusableInTouchMode="true"
        android:layout_below="@id/title"
        android:visibility="gone"
        android:id="@+id/search"
        >

        <cn.cnic.marathon.ui.CustomEditView
            android:id="@+id/search_friend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_corner"
            android:gravity="center_horizontal"
            android:hint="@string/search_hint"
            android:padding="2sp"
            android:textSize="20sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/friend_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/search"
        >
    </ListView>
	<cn.cnic.marathon.ui.FriendMeetingSendmessagePopupwindow 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    ></cn.cnic.marathon.ui.FriendMeetingSendmessagePopupwindow>
</RelativeLayout>